# work_logs

.history/: 1_1_定位孔洞_20250108030727.md  1_1_定位孔洞_20250108031105.md  1_1_定位孔洞_20250108031134.md  1_1_定位孔洞_20250108031143.md  1_1_定位孔洞_20250108031206.md  1_1_定位孔洞_20250108031219.md  1_1_定位孔洞_20250108031234.md  1_1_定位孔洞_20250108031252.md  1_1_定位孔洞_20250108031307.md  1_1_定位孔洞_20250108031316.md  1_1_定位孔洞_20250108031322.md  1_1_定位孔洞_20250108031414.md  1_1_定位孔洞_20250108031959.md  1_1_定位孔洞_20250108032002.md  1_1_定位孔洞_20250108032023.md  1_1_定位孔洞_20250108032026.md
0任务清单/: 0任务清单.md
0毕业设计任务清单/: 毕业设计任务清单.md
1_1定位孔洞/: 1_1_定位孔洞.md
1_2相机测试/: 1_2_1相机及镜头使用指南阅读笔记.md  1_2_4软件触发采集程序使用说明.md
1_2相机测试/code/: README.md  camera_controller.py  config.py  create_test_video.py  environment.yml  gui_app.py  image_processor.py  main.py  realtime_trajectory_demo.py  requirements.txt  test_vmbpy.py  trajectory_tracker.py  关闭Vimba程序.bat  启动轨迹跟踪.bat  轨迹跟踪使用说明.md
1_3二维码定位/code/: identify_qr_code.py
1_6epuck相机数据获取/epuck实体机获取相机数据/: epuck实体机获取相机数据.md
2_2webots导航和轨迹/: 2_2webots导航和轨迹.md
2_4isaac仿真测试/: 2_4isaac仿真测试.md  2isaaclab教程.md
3_1IMU数据处理/AI-IMU Dead-Reckoning/: AI-IMU代码复现.md  AI-IMU翻译.md
4_1CT论文阅读与复现/: CT-UIO翻译.md  CT-UIO阅读笔记.md
5_1SfUISE代码复现/: sfuise代码复现.md  sfuise代码复现问题说明.md  sfuise相关概念说明.md  sfuise运行结果.md  sfuise运行结果错误.md
code/AIIMU_ros2/: RAMDME.md
code/AIIMU_ros2/webots_epuck_ws/: webots_epuck_ws_info.md
code/SFUISE/fraunhofer_rtls_flare/: CMakeLists.txt  package.xml
code/SFUISE/sfuise_ws/: gt_output.txt  imu_output.txt
code/SFUISE/sfuise_ws/src/sfuise/: CMakeLists.txt  package.xml
code/SFUISE/sfuise_ws/src/sfuise/include/: SplineState.h
code/SFUISE/sfuise_ws/src/sfuise/launch/: sfuise_test_isas-walk1.launch
code/SFUISE/sfuise_ws/src/sfuise/src/: EstimationInterface.cpp  SplineFusion.cpp
毕业设计任务清单/: 毕业设计任务清单.md
(+27 files in other folders)
